base/usertestsys/overlays/usertestsys-vocabularysizeestimation-test/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myroute
  namespace: servpy
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/mo/test/voctest`)
      kind: Rule
      services:
        - name: myservice-usertestsys-vocabularysizeestimation-test
          port: 8080
      middlewares:
        - name: strip3prefixregex
